tests/NormalTests/paczka1/small_fuzzy/34303364.err
Error in line 1: DSi8r A984 4,5
Error in line 10: SASluPa8Y S257 64,4
Error in line 12: 0rjtipcJdPg S431 26,4
